<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMS Gateway</string>
    
    <string name="menu_settings">Settings</string>
    
    <string name="notifictation_active">SMS Gateway active</string>
    
    <string name="settings_label">Gateway Settings</string>
    <string name="settings_category_server">Server Settings</string>
    
    <string name="settings_server_incoming_url">Incoming (Push) URL</string>
    <string name="settings_server_incoming_url_summary">The URL to POST an SMS to</string>
    
    <string name="settings_server_outgoing_url">Outgoing (Poll) URL</string>
    <string name="settings_server_outgoing_url_summary">The URL to Poll to send SMS</string>

    <string name="settings_server_secret">Shared Secret</string>
    <string name="settings_server_secret_summary">The shared secret</string>
</resources>
