<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
  
  <PreferenceCategory 
  	android:title="@string/settings_category_server">
  	
  	<EditTextPreference 
  		android:name="@string/settings_server_incoming_url"
  		android:title="@string/settings_server_incoming_url"
  		android:summary="@string/settings_server_incoming_url_summary"
  		android:defaultValue="http://192.168.1.100:8008/sms/incoming"
  		android:key="server_incoming_url"
  	/>
  	
  	<EditTextPreference 
  		android:name="@string/settings_server_outgoing_url"
  		android:title="@string/settings_server_outgoing_url"
  		android:summary="@string/settings_server_outgoing_url_summary"
  		android:defaultValue="http://192.168.1.100:8008/sms/outgoing"
  		android:key="server_outgoing_url"
  	/>
  	
  	<EditTextPreference 
        android:name="@string/settings_server_secret"
        android:title="@string/settings_server_secret"
        android:summary="@string/settings_server_secret_summary"
        android:defaultValue="uber-secret"
        android:key="server_secret"
    />
  	
  </PreferenceCategory>
</PreferenceScreen>
